[package]
name = "fast_nodes"
version = "0.1.0"
authors = ["SquarerFive <squarerfiveofficial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
unsafe-vars = []

[dependencies]
rayon = "1.5"
multiarray = "0.1.3"
ndarray = {version = "0.13.1", features = ["rayon"] }
meval = "0.2.0"
tempus_fugit = "0.11.0"
half = "1.6.0"
noise = "0.6.0"


[dependencies.fasteval]
version = "0.2.4"
features = ["unsafe-vars"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
lto = true

